src/objects/Partner_Application__c.object
<CustomObject>
    <description>This defines a set of benefits that a Partner is entitled to, as well as a set of conditions and rules that a Partner must adhere to.</description>
    <fields>
        <fullName>APAC_Technology_Segment_Interest__c</fullName>
        <label>APAC Technology Segment Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_formula__c</fullName>
        <formula>IF(  ISNULL( Partner_Account__c )  , &apos;&apos;,  LEFT(Partner_Account__c  , 15))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 15 PartnerAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Company_Websites__c</fullName>
        <label>Additional Company Websites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affiliated_Cellular_Carriers__c</fullName>
        <label>Affiliated Cellular Carriers</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Agriculture_Forestry__c</fullName>
        <label>% Agriculture &amp; Forestry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Air_Rail_Maritime__c</fullName>
        <label>% Airlines, Rail, &amp; Maritime</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anti_Corruption_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti-Corruption Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_City_Town__c</fullName>
        <label>Applicant City/Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Country__c</fullName>
        <label>Applicant Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amer.Virgin Is.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua/Barbada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <label>Applicant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Fax_Number__c</fullName>
        <description>Applicant Fax Number</description>
        <label>Applicant Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_First_Name__c</fullName>
        <label>Applicant First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Last_Name__c</fullName>
        <label>Applicant Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Mobile_Number__c</fullName>
        <label>Applicant Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_Phone_Number__c</fullName>
        <label>Applicant Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_Primary_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish (Mexico)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Primary_Role__c</fullName>
        <label>Applicant Primary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CxO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Salutation__c</fullName>
        <label>Applicant Salutation</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Secondary_Role_s__c</fullName>
        <label>Applicant Secondary Role(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CxO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applicant_State_Province__c</fullName>
        <label>Applicant State/Province</label>
        <picklist>
            <controllingField>Applicant_Country__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aichi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alderney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANHUI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antrim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aomori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argyll and Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baden-Württemberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath and North East Somerset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEIJING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Street_Address_1__c</fullName>
        <label>Applicant Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Street_Address_2__c</fullName>
        <label>Applicant Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Technolgy_Preference__c</fullName>
        <label>Applicant Technology Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Radios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Radio Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional and Commercial Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Title__c</fullName>
        <label>Applicant Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Vertical_Market_Preference__c</fullName>
        <label>Applicant Vertical Market Preference</label>
        <picklist>
            <picklistValues>
                <fullName>US Federal Government</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Zip_Code_Postal_Code__c</fullName>
        <label>Applicant Zip Code/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Comments__c</fullName>
        <label>Application Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Create_Date__c</fullName>
        <label>Application Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Expiration_date__c</fullName>
        <formula>DATEVALUE(CreatedDate) + 90</formula>
        <label>Application Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Reference__c</fullName>
        <displayFormat>AP{00000000}</displayFormat>
        <label>Application Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Application_Status_Change_Date__c</fullName>
        <label>Application Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <controllingField>Application_Type__c</controllingField>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - CAM/CHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Mobile Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved-Pending PA Acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Pending Partner Acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved pending PIC action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Pending PIC Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Radio Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Radio Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Route to FED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Route to MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Route to RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Route to WNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - WNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval - FED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval - MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval - RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval - WNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In PIC Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Date__c</fullName>
        <description>Date on which Application is submitted.</description>
        <label>Application Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Net-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Community_Type__c</fullName>
        <label>Approved Community Type</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Application Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier / Service provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-tailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Reseller</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Federal_Tracks__c</fullName>
        <label>Approved Federal Tracks</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Network Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approved_Technology_Specializations__c</fullName>
        <label>Approved Technology Specializations</label>
        <picklist>
            <controllingField>Region_Requested__c</controllingField>
            <picklistValues>
                <fullName>Advanced Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Radio Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional and Commercial Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Area_Of_Primary_Marketing_Responsibility__c</fullName>
        <label>Area Of Primary Marketing Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Polynesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Caledonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Papua New Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sri Lanka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Authorize_Info_On_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize Info On Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Distributor__c</fullName>
        <label>Authorized Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>Hutton Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingram Micro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScanSource Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESSCO Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAV Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winncom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automotive_Manufacturing__c</fullName>
        <label>% Automotive Manufacturing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Break_Fix_Offered__c</fullName>
        <label>Break-Fix Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Offered</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Country_Locations__c</fullName>
        <label>Business Country Locations</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>